Fixed layout issues with images

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,7 +48,7 @@ body img {
   align: middle;
   margin: 5px auto auto auto;
   display: block;
-  max-width: 600px;
+  // max-width: 600px;
 }
 
 p {
