--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -7,10 +7,14 @@
   position: relative;
 }
 .featured-post-image {
-  min-height: 200px;
+  min-height: 500px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: 80% auto;
+}
+.featured-post img {
+  width: 100%;
+  height: auto;
 }
 .featured-post-title {
   display: inline-block;
