--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@ $code-font-family: "Source Code Pro", monospace;
 $brand-color: white;
 $brand-background: #30394E;
 
-$container-width: 1100px;
+$container-width: 1198px;
 $tablet-width: 600px;
 $phone-width: 480px;
 
